# ViscoCorrect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md  SETUP.sh
ViscoCorrect/: CMakeLists.txt
ViscoCorrect/src/: Application.cpp  Application.h  Layer.h  LayerStack.cpp  LayerStack.h
client/: CMakeLists.txt
client/src/: Application.cpp  Application.h  PingDemo.h  main.cpp
cmake/: common.cmake  costum-config.cmake  file_lists.cmake  target_debug_tools.cmake  target_imgui_glfw.cmake
include/: file_lists.cmake
include/spauly/viscocorrect/: application.h  calculator.h  graph_base.h  input_units.h  manage_project.h  project.h
include/spauly/viscocorrect/frontend/: layer.h  layerstack.h
include/spauly/viscocorrect/frontend/imgui_glfw/: graph_impl_imgui_glfw.h
include/spauly/viscocorrect/util/: event.h  properties.h
server/: CMakeLists.txt
server/src/: Server.cpp  Server.h  main.cpp
src/: Application.cpp  Application.h  Calculator.cpp  Calculator.h  Graph.cpp  Graph.h  Graph_old.cpp  LayerStack.cpp  LayerStack.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  Viewport.cpp  Viewport.h  application.cpp  application_base.h  file_lists.cmake  graph_base.cpp  layerstack.cpp  layerstack.h  main.cpp  manage_project.cpp  manage_project.h  project.cpp  project.h  properties.cpp
src/curve_fitter/: curve_fitting.cpp
src/debug/: CurveFitting.cpp  CurveFitting.h  DebugTools.h
src/frontend/imgui_glfw/: application_impl_imgui_glfw.cpp  application_impl_imgui_glfw.h  main_impl_imgui_glfw.cpp
src/frontend/util_frontend/: layer.h  layerstack.cpp
src/frontends/imgui_glfw/: application_impl_imgui_glfw.h
src/frontends/util_frontend/: layerstack.h
src/imgui_glfw/: application_impl_imgui_glfw.cpp  graph_impl_imgui_glfw.cpp
src/spauly/viscocorrect/: application.cpp  application.h  application_base.h  application_old.h  calculator.cpp  calculator.h  graph.cpp  graph.h  graph_base.cpp  graph_base.h  manage_project.cpp  manage_project.h  project.cpp  project.h
src/spauly/viscocorrect/debug/: CurveFitting.cpp  CurveFitting.h  DebugTools.h  curve_fitting.cpp  curve_fitting.h  debug_tools.cpp  debug_tools.h
src/spauly/viscocorrect/frontend/imgui_glfw/: application_impl_imgui_glfw.cpp  application_impl_imgui_glfw.h  graph_impl_imgui_glfw.cpp  graph_impl_imgui_glfw.h  main_impl_imgui_glfw.cpp
src/spauly/viscocorrect/frontend/util_frontend/: layer.h  layerstack.cpp  layerstack.h
src/spauly/viscocorrect/util/: custom_types.h  event.h  input_units.h  mathematical_functions.h  properties.cpp  properties.h  timer.h
src/util/: event.h  input_units.h  layer.h  layerstack.cpp  layerstack.h  mathematical_functions.h  properties.cpp  properties.h
src/utils/: DebugTools.h  Event.h  Layer.h  LayerStack.cpp  LayerStack.h  Types.cpp  Types.h  vc_config.h
src/utils/Debugging/: CurveFitting.cpp  CurveFitting.h  DebugTools.cpp  DebugTools.h
utils/: CMakeLists.txt  Your_Project_protocol.proto
